[FIX] Overflowing collapsible block.

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -338,6 +338,7 @@ $collapsible-transparency-height: 4em;
 
 
 .collapsible {
+    position: relative;
     display: block;
     overflow: hidden;
     height: auto;
